implement Akubra REST
